// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkWrapper should have hover styles when isInteractive=true 1`] = `
.emotion-0 {
  border-radius: 3px;
  margin: 0 auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: initial;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  position: relative;
  height: 432px;
}

.emotion-0:hover {
  background-color: #EBECF0;
}

.emotion-0:hover:after {
  background: #EBECF0 !important;
}

.emotion-0:hover .embed-header {
  opacity: 1;
}

.emotion-0:active {
  background-color: #DEEBFF;
}

.emotion-0:after {
  content: '';
  background: transparent;
  -webkit-transition: background 0.3s,box-shadow 0.3s;
  transition: background 0.3s,box-shadow 0.3s;
  position: absolute;
  width: calc(100% + 16px);
  height: calc(100% + 8px);
  left: -8px;
  border-radius: 3px;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Styled(div)
  isInteractive={true}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`LinkWrapper should not have hover styles when isInteractive=false 1`] = `
.emotion-0 {
  border-radius: 3px;
  margin: 0 auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: initial;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  position: relative;
  height: 432px;
}

.emotion-0:after {
  content: '';
  background: transparent;
  -webkit-transition: background 0.3s,box-shadow 0.3s;
  transition: background 0.3s,box-shadow 0.3s;
  position: absolute;
  width: calc(100% + 16px);
  height: calc(100% + 8px);
  left: -8px;
  border-radius: 3px;
}

.emotion-0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<Styled(div)
  isInteractive={false}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Wrapper should have hover styles when isInteractive=true 1`] = `
.emotion-0 {
  border-radius: 3px;
  margin: 0 auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: initial;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  position: relative;
  height: 432px;
  margin-top: 10px;
}

.emotion-0:hover {
  background-color: #EBECF0;
}

.emotion-0:hover:after {
  background: #EBECF0 !important;
}

.emotion-0:hover .embed-header {
  opacity: 1;
}

.emotion-0:active {
  background-color: #DEEBFF;
}

.emotion-0:after {
  content: '';
  background: transparent;
  -webkit-transition: background 0.3s,box-shadow 0.3s;
  transition: background 0.3s,box-shadow 0.3s;
  position: absolute;
  width: calc(100% + 16px);
  height: calc(100% + 8px);
  left: -8px;
  border-radius: 3px;
}

<Styled(div)
  isInteractive={true}
>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;

exports[`Wrapper should not have hover styles when isInteractive=false 1`] = `
.emotion-0 {
  border-radius: 3px;
  margin: 0 auto;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  width: 100%;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  line-height: initial;
  -webkit-transition: background 0.3s;
  transition: background 0.3s;
  position: relative;
  height: 432px;
  margin-top: 10px;
}

.emotion-0:after {
  content: '';
  background: transparent;
  -webkit-transition: background 0.3s,box-shadow 0.3s;
  transition: background 0.3s,box-shadow 0.3s;
  position: absolute;
  width: calc(100% + 16px);
  height: calc(100% + 8px);
  left: -8px;
  border-radius: 3px;
}

<Styled(div)>
  <div
    className="emotion-0"
  />
</Styled(div)>
`;
